<resources>

    <string name="app_name">Manajemen Uang</string>

    <!-- String button -->
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="revert">Revert</string>

    <!-- String sub-heading -->
    <string name="amount">Jumlah </string>
    <string name="deskripsi">Keterangan</string>
    <string name="tanggal">Tanggal</string>
    <string name="type">Tipe</string>
    <string name="info_user">Tentang Saya</string>
    <string name="info_transaksi">Transaksi</string>

    <!-- Strtypetipe -->
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="undefined">Tidak diketahui</string>

    <string name="content_desc">Profile Picture</string>

    <string name="action_settings">Settings</string>

    <!-- Strdialog_new_useralog -->
    <string name="welcome">Selamat Datang!</string>
    <string name="nama">Nama</string>
    <string name="dompet">Dompet</string>

    <!-- String validaso -->
    <string name="validasi_dialog">Anda harus mengisi nama dan nominal dompet terlebih dahulu!</string>
    <string name="validasi_form">Jumlah tidak boleh kosong!</string>

    <!-- String konfirmasi -->
    <string name="konfirmasi">Tekan sekali lagi untuk keluar!</string>
    <string name="transaction_not_found">Anda belum mencatat transaksi apapun.</string>

    <!-- String success confirmation -->
    <string name="success_edit_transaction">Berhasil melakukan perubahan</string>
    <string name="success_create_transaction">Berhasil menambahkan transaksi baru</string>
</resources>
